[gd_scene load_steps=6 format=3 uid="uid://svcat5twp0tj"]

[ext_resource type="Script" path="res://Scrips/game.gd" id="1_pmwlm"]
[ext_resource type="PackedScene" uid="uid://gg17sin70m6c" path="res://Scenes/kid_spawnner.tscn" id="2_ac2h1"]
[ext_resource type="PackedScene" uid="uid://4hg7xf2kanx7" path="res://Scenes/Player.tscn" id="3_0vxsx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ln4w"]
size = Vector2(17, 653)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2yaej"]
size = Vector2(1180, 20)

[node name="Game" type="Node2D"]
script = ExtResource("1_pmwlm")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Background" type="ColorRect" parent="."]
offset_right = 1153.0
offset_bottom = 646.0
color = Color(0.486275, 0.486275, 0.486275, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_right = 410.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_right = 411.0
offset_bottom = 40.0
theme_override_constants/separation = 20

[node name="LivesLabel" type="Label" parent="CanvasLayer/Panel/HBoxContainer"]
layout_mode = 2
text = "LIVES: "

[node name="ScoreLabel" type="Label" parent="CanvasLayer/Panel/HBoxContainer"]
layout_mode = 2
text = "SCORE: "

[node name="LevelUpLabel" type="Label" parent="CanvasLayer/Panel/HBoxContainer"]
layout_mode = 2
text = "LEVEL UP"

[node name="KidSpawnner" parent="." instance=ExtResource("2_ac2h1")]

[node name="Bordes" type="Node2D" parent="."]

[node name="StaticBody2D3" type="StaticBody2D" parent="Bordes"]

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Bordes/StaticBody2D3"]
position = Vector2(1163, 324)
shape = SubResource("RectangleShape2D_6ln4w")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Bordes/StaticBody2D3"]
position = Vector2(-8.5, 317.5)
shape = SubResource("RectangleShape2D_6ln4w")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Bordes/StaticBody2D3"]
position = Vector2(576, 658)
shape = SubResource("RectangleShape2D_2yaej")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bordes/StaticBody2D3"]
position = Vector2(579, -12)
shape = SubResource("RectangleShape2D_2yaej")

[node name="CharacterBody2D" parent="." instance=ExtResource("3_0vxsx")]
position = Vector2(574, 319)

[node name="DifficultTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="DifficultTimer" to="." method="_on_difficult_timer_timeout"]
